Update .gitignore and refactor ReviewResume formatting
Expanded .gitignore to include additional environment and Vite-related files. Refactored ReviewResume.jsx for consistent string quoting and improved JSX formatting. Removed unnecessary StrictMode import from main.jsx.

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -23,3 +23,42 @@ dist-ssr
 *.sln
 *.sw?
 .env
+.env.local
+.env.example
+
+# Vite
+.vite
+# Clerk
+.env.local
+.env.example
+.env
+.env.development
+.env.production
+.env.test
+.env.test.local
+.env.test.example
+.env.test.development
+.env.test.production
+.env.test.test
+.env.test.test.local
+.env.test.test.example
+.env.test.test.development
+.env.test.test.production
+.env.test.test.test
+.env.test.test.test.local
+.env.test.test.test.example
+.env.test.test.test.development
+.env.test.test.test.production
+.env.test.test.test.test
+.env.test.test.test.test.local
+.env.test.test.test.test.example
+.env.test.test.test.test.development
+.env.test.test.test.test.production
+.env.test.test.test.test.test
+.env.test.test.test.test.test.local
+.env.test.test.test.test.test.example
+.env.test.test.test.test.test.development
+.env.test.test.test.test.test.production
+.env.test.test.test.test.test.test
+.env.test.test.test.test.test.test.local
+ 
