--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "form-data": "^4.0.4",
     "multer": "^2.0.2",
     "openai": "^5.12.2",
+    "pdf-parse": "^1.1.1",
     "replicate": "^1.0.1",
     "uuid": "^11.1.0"
   },
