Database connection modification

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -5,7 +5,8 @@
       "src": "server.js",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["dist/**"]
+        "includeFiles": ["**/*"],
+        "maxLambdaSize": "15mb"
       }
     }
   ],
@@ -14,5 +15,11 @@
       "src": "/(.*)",
       "dest": "server.js"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production",
+    "NODE_OPTIONS": "--enable-source-maps --max-http-header-size=16384"
+  },
+  "regions": ["iad1"],
+  "buildCommand": "npm install && npm run build"
 }
