--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
+    "rehype-raw": "^7.0.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
